[package]
name = "dnp3_oustation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnp3_outstation"
path = "src/main.rs"

[dependencies]
codec = "0.0.0"
dnp3 = "1.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["test-util"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7", features = ["codec"] }
