[package]
name = "dnp3_oustation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnp3_outstation"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clokwerk = "0.4.0"
codec = "0.0.0"
dnp3 = "1.6.0"
dotenv = "0.15"
log = "0.4.22"
rand = "0.9.0-alpha.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["test-util"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7", features = ["codec"] }
